--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.5",
+    "@react-spring/web": "^9.6.0",
     "framer-motion": "^12.0.5",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
