--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 EMAIL_USER=vishnuparihar239925@gmail.com
 EMAIL_PASS=jnsx qagh qrqt xhul
+MONGO_URI=mongodb://vishnu:1234@cluster0-shard-00-00.mongodb.net:27017,JTS-ClientForm
