--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "express": "^4.21.2",
     "framer-motion": "^12.0.5",
     "leaflet": "^1.9.4",
+    "mongoose": "^8.11.0",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.3",
-    "react-typewriter-effect": "^1.1.0"
+    "react-typewriter-effect": "^1.1.0",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
