--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 EMAIL_USER=vishnuparihar239925@gmail.com
 EMAIL_PASS=jnsx qagh qrqt xhul
+ PORT=5000
  
+RECIPIENT_EMAIL=vp2399255683@gmail.com
+MONGO_URI=mongodb://vishnu:1234@cluster0.mongodb.net/jts-pdf?retryWrites=true&w=majority
