--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,35 @@
 {
-  "name": "backend",
+  "name": "jts-backend",
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "transportation",
+    "logistics",
+    "milk",
+    "delivery"
+  ],
+  "author": "Jagdamba Transport Services",
   "license": "ISC",
-  "description": "",
+  "description": "Backend API for Jagdamba Transport Services",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^9.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "mongoose": "^8.12.1"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
+    "razorpay": "^2.9.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
