--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
