qoute saperate file

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-EMAIL_USER=vishnuparihar239925@gmail.com
-EMAIL_PASS=jnsx qagh qrqt xhul
- PORT=5001
+EMAIL_USER='vishnuparihar239925@gmail.com'
+EMAIL_PASS='jnsx qagh qrqt xhul'
+ PORT=5002
  
 RECIPIENT_EMAIL=vp2399255683@gmail.com
 MONGO_URI='mongodb+srv://vishnu:1234@cluster0.7j48j.mongodb.net/JTS'
