added admin dash

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,7 @@ EMAIL_PASS='jnsx qagh qrqt xhul'
  
 RECIPIENT_EMAIL=vp2399255683@gmail.com
 MONGO_URI='mongodb+srv://vishnu:1234@cluster0.7j48j.mongodb.net/JTS'
+
+CLOUDINARY_CLOUD_NAME='dwvt8pq94'
+CLOUDINARY_API_KEY='216446426953217'
+CLOUDINARY_API_SECRET='T9SbHOzVWLtT4kg0Y7EVYn2AK_4'
