--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "description": "Backend API for Jagdamba Transport Services",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "concurrently": "^9.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -27,8 +28,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.0",
     "razorpay": "^2.9.6",
+    "sharp": "^0.34.2",
     "winston": "^3.17.0"
   },
   "devDependencies": {
