--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-rate-limit": "^7.5.1",
     "framer-motion": "^12.0.5",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "mongoose": "^8.12.1",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
@@ -28,6 +29,7 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.5",
     "react-typewriter-effect": "^1.1.0",
     "styled-components": "^6.1.15",
     "winston": "^3.17.0"
